@@ -1,3 +1,8 @@
+2003-09-23  Hidetoshi Tajima  <hidetoshi.tajima@sun.com>
+
+	* libgnome/gnome-init.c: make --help work with popt-1.7.
+	Fix bug 123052.
+
 2003-09-01  Anders Carlsson  <andersca@gnome.org>
 
 	* configure.in: Release 2.4.0
